Include cinttypes before libunwind.h

This should fix compilation on Centos 7 with older compilers

BUG: 441125